scripts/nullaway/original/url969d1ddca4_compmstr_java_scheme_tgz-pJ8-com_undi_javascheme_JavaSchemeJ8.txt
../original/url969d1ddca4_compmstr_java_scheme_tgz-pJ8-com_undi_javascheme_JavaSchemeJ8/src/com/undi/util/Reflector.java:33: error: [NullAway] returning @Nullable expression from method with @NonNull return type
    return null;
    ^
    (see http://t.uber.com/nullaway )
../original/url969d1ddca4_compmstr_java_scheme_tgz-pJ8-com_undi_javascheme_JavaSchemeJ8/src/com/undi/util/Reflector.java:117: error: [NullAway] passing @Nullable parameter 'null' where @NonNull is required
    return invokeMatchingMethod(methodName, methods, null, args);
                                                     ^
    (see http://t.uber.com/nullaway )
../original/url969d1ddca4_compmstr_java_scheme_tgz-pJ8-com_undi_javascheme_JavaSchemeJ8/src/com/undi/util/Reflector.java:201: error: [NullAway] passing @Nullable parameter 'argType' where @NonNull is required
        ret = paramArgTypeMatch(paramType, argType);
                                           ^
    (see http://t.uber.com/nullaway )
../original/url969d1ddca4_compmstr_java_scheme_tgz-pJ8-com_undi_javascheme_JavaSchemeJ8/src/com/undi/util/Reflector.java:285: error: [NullAway] returning @Nullable expression from method with @NonNull return type
      return null;
      ^
    (see http://t.uber.com/nullaway )
../original/url969d1ddca4_compmstr_java_scheme_tgz-pJ8-com_undi_javascheme_JavaSchemeJ8/src/com/undi/util/Reflector.java:362: error: [NullAway] returning @Nullable expression from method with @NonNull return type
      return null;
      ^
    (see http://t.uber.com/nullaway )
../original/url969d1ddca4_compmstr_java_scheme_tgz-pJ8-com_undi_javascheme_JavaSchemeJ8/src/com/undi/util/SneakyThrow.java:23: error: [NullAway] returning @Nullable expression from method with @NonNull return type
    return null;
    ^
    (see http://t.uber.com/nullaway )
../original/url969d1ddca4_compmstr_java_scheme_tgz-pJ8-com_undi_javascheme_JavaSchemeJ8/src/com/undi/javascheme/SchemeObject.java:19: error: [NullAway] @NonNull field mType not initialized
  private type mType;
               ^
    (see http://t.uber.com/nullaway )
../original/url969d1ddca4_compmstr_java_scheme_tgz-pJ8-com_undi_javascheme_JavaSchemeJ8/src/com/undi/javascheme/SchemeObject.java:20: error: [NullAway] @NonNull field mData not initialized
  private Object mData;
                 ^
    (see http://t.uber.com/nullaway )
../original/url969d1ddca4_compmstr_java_scheme_tgz-pJ8-com_undi_javascheme_JavaSchemeJ8/src/com/undi/javascheme/SchemeObject.java:522: error: [NullAway] assigning @Nullable expression to @NonNull field
    obj.mData = null;
              ^
    (see http://t.uber.com/nullaway )
../original/url969d1ddca4_compmstr_java_scheme_tgz-pJ8-com_undi_javascheme_JavaSchemeJ8/src/com/undi/javascheme/SchemeReader.java:351: error: [NullAway] returning @Nullable expression from method with @NonNull return type
      return null;
      ^
    (see http://t.uber.com/nullaway )
../original/url969d1ddca4_compmstr_java_scheme_tgz-pJ8-com_undi_javascheme_JavaSchemeJ8/src/com/undi/javascheme/SchemeReader.java:374: error: [NullAway] returning @Nullable expression from method with @NonNull return type
      return null;
      ^
    (see http://t.uber.com/nullaway )
../original/url969d1ddca4_compmstr_java_scheme_tgz-pJ8-com_undi_javascheme_JavaSchemeJ8/src/com/undi/javascheme/SchemeEval.java:775: error: [NullAway] passing @Nullable parameter 'newParamsBuilder' where @NonNull is required
            	paramsList = SchemeObject.concatList(newParamsBuilder, 
            	                                     ^
    (see http://t.uber.com/nullaway )
12 errors
